# ReelUP

./: .gitignore  pyproject.toml  requirements.txt
app/content/: admin.py  like_dislike.py  serializers.py  urls.py  views.py
app/content/migrations/: 0001_initial.py  0002_initial.py  0003_remove_book_genre_remove_book_tags_remove_book_user_and_more.py
app/content/models/: __init__.py  post.py  reel.py
app/users/: serializers.py  urls.py  views.py
app/users/migrations/: 0001_initial.py
app/users/models/: __init__.py  models.py  user.py
core/: drf_yasg.py  settings.py  urls.py
core/settings/: base.py  env_reader.py  local.py  prod.py
