[tool.poetry]
name = "eho"
version = "0.1.0"
description = ""
authors = ["aziret"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2"
django-jazzmin = "^3.0.1"
djangorestframework = "^3.16.0"
drf-spectacular = "^0.28.0"
drf-yasg = "^1.21.10"
pillow = "^11.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
